Prevent overflowing cards.

--- a/src/static/less/app/components/cards.less
+++ b/src/static/less/app/components/cards.less
@@ -356,7 +356,7 @@ header + nav + .wall {
 		padding-right: 15px;
 	}
 	.righty {
-		width: 225px;
+		// width: 225px;
 		padding-left: 20px;
 		padding-right: 10px;
 		text-align: right;
